--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "cors": "^2.8.5",
     "exceljs": "^1.4.2",
     "express": "^4.14.0",
-    "express-session": "^1.17.3",
+    "express-jwt": "^8.4.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongod": "^2.0.0",
     "mongoose": "^5.0.17",
@@ -50,7 +51,6 @@
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
-    "@types/express-session": "^1.17.7",
     "@types/jasmine": "~4.3.0",
     "@types/multer": "^1.4.7",
     "@types/node-schedule": "^2.1.0",
